<?xml version="1.0"?>
<package format="2">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>custom messages for obstacle detection and mpc prediction</description>
  <maintainer email="bhandarivedant96@gmail.com">Vedant Bhandari</maintainer>
  <license>MIT</license>
  <author email="bhandarivedant96@gmail.com">Vedant Bhandari</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
