###############################################################################
# set minimum required version of cmake, project name and compile options
###############################################################################
cmake_minimum_required(VERSION 3.0.2)
project(demo)

###############################################################################
# find catkin packages and libraries for catkin and system dependencies
###############################################################################
find_package(catkin REQUIRED)

###############################################################################
# catkin specific configuration
###############################################################################
catkin_package(
)

###############################################################################
# Build
###############################################################################

include_directories(
)