<?xml version="1.0"?>
<package format="2">
  <name>demo</name>
  <version>0.0.0</version>
  <description>run the demo of all nodes using the launch file in this package</description>
  <maintainer email="bhandarivedant96@gmail.com">Vedant Bhandari</maintainer>
  <license>MIT</license>
  <author email="bhandarivedant96@gmail.com">Vedant Bhandari</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
