<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detection</name>
  <version>0.0.0</version>
  <description>the obstacle detection node returns the centre coordinates of the detected obstacles at a time instant</description>
  <maintainer email="bhandarivedant96@gmail.com">Vedant Bhandari</maintainer>
  <license>MIT</license>
  <author email="bhandarivedant96@gmail.com">Vedant Bhandari</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
