<?xml version="1.0"?>
<package format="2">
  <name>plotter</name>
  <version>0.0.0</version>
  <description>plots the sensor data</description>
  <maintainer email="bhandarivedant96@gmail.com">Vedant Bhandari</maintainer>
  <license>MIT</license>
  <author email="bhandarivedant96@gmail.com">Vedant Bhandari</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
