<?xml version="1.0"?>
<package format="2">
  <name>slam</name>
  <version>0.0.0</version>
  <description>outputs the slam pose estimate and ground truth for simulation</description>
  <maintainer email="bhandarivedant96@gmail.com">Vedant Bhandari</maintainer>
  <license>MIT</license>
  <author email="bhandarivedant96@gmail.com">Vedant Bhandari</author>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
